--- a/charts/thoras/templates/agent/daemonset.yaml
+++ b/charts/thoras/templates/agent/daemonset.yaml
@@ -6,6 +6,9 @@ metadata:
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "thoras.labels" . | nindent 4 }}
+    {{- with .Values.labels }}
+      {{- toYaml . | nindent 4 }}
+    {{- end }}
 spec:
   selector:
     matchLabels:
@@ -17,6 +20,9 @@ spec:
         {{- include "thoras.labels" . | nindent 8 }}
         {{- with .Values.thorasAgent.labels }}
           {{- toYaml . | nindent 8 }}
+        {{- end }}
+        {{- if or (.Values.labels) (.Values.thorasAgent.labels) }}
+          {{- mustMerge .Values.thorasAgent.labels .Values.labels | toYaml | nindent 8 }}
         {{- end }}
       annotations:
         prometheus.io/scrape: "true"
