--- a/charts/thoras/templates/api-server-v2/service-account.yaml
+++ b/charts/thoras/templates/api-server-v2/service-account.yaml
@@ -4,6 +4,9 @@ kind: ServiceAccount
 metadata:
   labels:
     {{- include "thoras.labels" . | nindent 4 }}
+    {{- with .Values.labels }}
+      {{- toYaml . | nindent 4 }}
+    {{- end }}
   name: {{ .Values.thorasApiServerV2.serviceAccount.name }}
   namespace: {{ .Release.Namespace }}
 imagePullSecrets:
