--- a/charts/thoras/templates/api-server-v2/service.yaml
+++ b/charts/thoras/templates/api-server-v2/service.yaml
@@ -6,8 +6,8 @@ metadata:
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "thoras.labels" . | nindent 4 }}
-    {{- with .Values.thorasApiServerV2.labels }}
-      {{- toYaml . | nindent 4 }}
+    {{- if or (.Values.labels) (.Values.thorasApiServerV2.labels) }}
+          {{- mustMerge .Values.thorasApiServerV2.labels .Values.labels | toYaml | nindent 4 }}
     {{- end }}
 spec:
   ports:
