--- a/charts/thoras/templates/collector/service.yaml
+++ b/charts/thoras/templates/collector/service.yaml
@@ -6,8 +6,8 @@ metadata:
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "thoras.labels" . | nindent 4 }}
-    {{- with .Values.metricsCollector.labels }}
-      {{- toYaml . | nindent 4 }}
+    {{- if or (.Values.labels) (.Values.metricsCollector.labels) }}
+          {{- mustMerge .Values.metricsCollector.labels .Values.labels | toYaml | nindent 4 }}
     {{- end }}
 spec:
   ports:
