--- a/charts/thoras/templates/collector/storageclass.yaml
+++ b/charts/thoras/templates/collector/storageclass.yaml
@@ -5,6 +5,9 @@ metadata:
   name: {{ .Values.metricsCollector.persistence.storageClassName }}
   labels:
     {{- include "thoras.labels" . | nindent 4 }}
+    {{- with .Values.labels }}
+      {{- toYaml . | nindent 4 }}
+    {{- end }}
 provisioner: efs.csi.aws.com
 parameters:
   fileSystemId: {{ .Values.metricsCollector.persistence.createEFSStorageClass.fileSystemId }}
