--- a/charts/thoras/templates/resource-quota.yaml
+++ b/charts/thoras/templates/resource-quota.yaml
@@ -8,6 +8,9 @@ metadata:
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "thoras.labels" . | nindent 4 }}
+    {{- with .Values.labels }}
+      {{- toYaml . | nindent 4 }}
+    {{- end }}
 spec:
   hard:
     pods: {{ .Values.resourceQuota.pods }}
