--- a/charts/thoras/templates/slm-api/service.yaml
+++ b/charts/thoras/templates/slm-api/service.yaml
@@ -7,8 +7,8 @@ metadata:
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "thoras.labels" . | nindent 4 }}
-    {{- with .Values.thorasSlmAgent.labels }}
-      {{- toYaml . | nindent 4 }}
+    {{- if or (.Values.labels) (.Values.thorasSlmAgent.labels) }}
+      {{- mustMerge .Values.thorasSlmAgent.labels .Values.labels | toYaml | nindent 4 }}
     {{- end }}
 spec:
   ports:
