--- a/charts/thoras/templates/dashboard/deployment.yaml
+++ b/charts/thoras/templates/dashboard/deployment.yaml
@@ -6,6 +6,9 @@ metadata:
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "thoras.labels" . | nindent 4 }}
+    {{- with .Values.labels }}
+      {{- toYaml . | nindent 4 }}
+    {{- end }}
 spec:
   replicas: {{ .Values.thorasDashboard.replicas }}
   selector:
@@ -16,8 +19,8 @@ spec:
       labels:
         app: thoras-dashboard
         {{- include "thoras.labels" . | nindent 8 }}
-        {{- with .Values.thorasDashboard.labels }}
-          {{- toYaml . | nindent 8 }}
+        {{- if or (.Values.labels) (.Values.thorasDashboard.labels) }}
+          {{- mustMerge .Values.thorasDashboard.labels .Values.labels | toYaml | nindent 8 }}
         {{- end }}
       annotations:
         {{- if not .Values.thorasDashboard.unittesting }}
