--- a/charts/thoras/templates/monitor/service-account.yaml
+++ b/charts/thoras/templates/monitor/service-account.yaml
@@ -5,6 +5,9 @@ kind: ServiceAccount
 metadata:
   labels:
     {{- include "thoras.labels" . | nindent 4 }}
+    {{- with .Values.labels }}
+      {{- toYaml . | nindent 4 }}
+    {{- end }}
   name: {{ .Values.thorasMonitor.serviceAccount.name }}
   namespace: {{ .Release.Namespace }}
 imagePullSecrets:
