--- a/charts/thoras/templates/operator/service.yaml
+++ b/charts/thoras/templates/operator/service.yaml
@@ -6,8 +6,8 @@ metadata:
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "thoras.labels" . | nindent 4 }}
-    {{- with .Values.thorasOperator.labels }}
-      {{- toYaml . | nindent 4 }}
+    {{- if or (.Values.labels) (.Values.thorasOperator.labels) }}
+      {{- mustMerge .Values.thorasOperator.labels .Values.labels | toYaml | nindent 8 }}
     {{- end }}
 spec:
   ports:
