Replace config pipe with empty string

--- a/charts/thoras/values.yaml
+++ b/charts/thoras/values.yaml
@@ -110,7 +110,7 @@ metricsCollector:
       memory: "3072Mi"
     config:
       enabled: false
-      content: |
+      content: ""
   blobService:
     logLevel: "info"
     pprof:
