--- a/charts/thoras/templates/collector/deployment.yaml
+++ b/charts/thoras/templates/collector/deployment.yaml
@@ -196,12 +196,7 @@ spec:
             value: "/var/lib/share"
           - name: SERVICE_ENABLE_PPROF
             value: {{ .Values.metricsCollector.blobService.pprof.enabled | quote }}
-        resources:
-          limits:
-            memory: {{ .Values.metricsCollector.blobService.limits.memory }}
-          requests:
-            cpu: {{ .Values.metricsCollector.blobService.requests.cpu }}
-            memory: {{ .Values.metricsCollector.blobService.requests.memory }}
+        resources: {{ toYaml .Values.metricsCollector.blobService.resources | nindent 10 }}
         {{- if .Values.metricsCollector.persistence.enabled }}
         volumeMounts:
           - mountPath: /var/lib/share
