--- a/charts/thoras/templates/agent/daemonset.yaml
+++ b/charts/thoras/templates/agent/daemonset.yaml
@@ -14,7 +14,7 @@ spec:
     metadata:
       labels:
         app: thoras-agent
-        {{- include "thoras.labels" . | nindent 8 }}
+        {{- include "thoras.labels" (mustMerge (dict "Values" (mustMerge (dict "labels" .Values.thorasAgent.labels) .Values)) .) | nindent 8 }}
       annotations:
         prometheus.io/scrape: "true"
         prometheus.io/port: {{ .Values.thorasAgent.containerPort | quote }}
