--- a/charts/thoras/templates/worker/deployment.yaml
+++ b/charts/thoras/templates/worker/deployment.yaml
@@ -19,7 +19,7 @@ spec:
     metadata:
       labels:
         app: thoras-worker
-        {{- include "thoras.labels" . | nindent 8 }}
+        {{- include "thoras.labels" (mustMerge (dict "Values" (mustMerge (dict "labels" .Values.thorasWorker.labels) .Values)) .) | nindent 8 }}
       {{- if or .Values.thorasWorker.prometheus.enabled .Values.thorasWorker.podAnnotations }}
       annotations:
         {{- if .Values.thorasWorker.prometheus.enabled }}
