--- a/charts/thoras/templates/worker/service.yaml
+++ b/charts/thoras/templates/worker/service.yaml
@@ -5,7 +5,7 @@ metadata:
   name: thoras-worker
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "thoras.labels" . | nindent 4 }}
+    {{- include "thoras.labels" (mustMerge (dict "Values" (mustMerge (dict "labels" .Values.thorasWorker.labels) .Values)) .) | nindent 4 }}
 spec:
   ports:
   - name: http-metrics
