Support global labels (#480)
* Support global values

* Merge global and specific labels

* Update unit tests

* Remove webhooks from snapshot global label unittest

* Re-add services

--- a/charts/thoras/templates/agent/daemonset.yaml
+++ b/charts/thoras/templates/agent/daemonset.yaml
@@ -14,10 +14,7 @@ spec:
     metadata:
       labels:
         app: thoras-agent
-        {{- include "thoras.labels" . | nindent 8 }}
-        {{- with .Values.thorasAgent.labels }}
-          {{- toYaml . | nindent 8 }}
-        {{- end }}
+        {{- include "thoras.labels" (mustMerge (dict "Values" (mustMerge (dict "labels" .Values.thorasAgent.labels) .Values)) .) | nindent 8 }}
       annotations:
         prometheus.io/scrape: "true"
         prometheus.io/port: {{ .Values.thorasAgent.containerPort | quote }}
