--- a/charts/thoras/templates/slm-api/service.yaml
+++ b/charts/thoras/templates/slm-api/service.yaml
@@ -6,10 +6,7 @@ metadata:
   name: thoras-slm-api
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "thoras.labels" . | nindent 4 }}
-    {{- with .Values.thorasSlmAgent.labels }}
-      {{- toYaml . | nindent 4 }}
-    {{- end }}
+    {{- include "thoras.labels" (mustMerge (dict "Values" (mustMerge (dict "labels" .Values.thorasSlmAgent.labels) .Values)) .) | nindent 4 }}
 spec:
   ports:
   - name: http
