--- a/charts/thoras/templates/dashboard/service.yaml
+++ b/charts/thoras/templates/dashboard/service.yaml
@@ -9,10 +9,7 @@ metadata:
     {{- toYaml . | nindent 8 }}
   {{- end }}
   labels:
-    {{- include "thoras.labels" . | nindent 4 }}
-    {{- with .Values.thorasDashboard.labels }}
-      {{- toYaml . | nindent 4 }}
-    {{- end }}
+    {{- include "thoras.labels" (mustMerge (dict "Values" (mustMerge (dict "labels" .Values.thorasDashboard.labels) .Values)) .) | nindent 4 }}
 spec:
 {{- if (or (eq .Values.thorasDashboard.service.type "ClusterIP") (empty .Values.thorasDashboard.service.type)) }}
   type: ClusterIP
