--- a/charts/thoras/values.yaml
+++ b/charts/thoras/values.yaml
@@ -277,6 +277,12 @@ thorasAgent:
     name: thoras-agent
   frequency: 15
   containerPort: 9101
+  limits:
+    memory: 128Mi
+  requests:
+    cpu: 100m
+    memory: 128Mi
+  securityContext: {}
   podAnnotations: {}
   labels: {}
 
