--- a/charts/thoras/templates/agent/daemonset.yaml
+++ b/charts/thoras/templates/agent/daemonset.yaml
@@ -54,14 +54,14 @@ spec:
         ports:
           - containerPort: {{ .Values.thorasAgent.containerPort }}
         resources:
-          limits:
-            memory: 128Mi
-          requests:
-            cpu: 100m
-            memory: 128Mi
+          limits: {{ toYaml .Values.thorasAgent.limits | nindent 12 }}
+          requests: {{ toYaml .Values.thorasAgent.requests | nindent 12 }}
         securityContext:
           # the agent requires elevated privileges to collect ebpf traces
           privileged: true
+          {{- if .Values.thorasAgent.securityContext  -}}
+          {{- toYaml .Values.thorasAgent.securityContext | nindent 10 }}
+          {{- end }}
       # drawn from https://github.com/kubeservice-stack/kubservice-charts/blob/6be7b9fb081abd2255dc83854dbed2d7d11e0973/charts/kubeservice-ebpf-exporter/values.yaml#L67-L69
       tolerations:
         - effect: NoSchedule
