update readme and values

--- a/charts/thoras/values.yaml
+++ b/charts/thoras/values.yaml
@@ -279,6 +279,7 @@ thorasAgent:
   containerPort: 9101
   podAnnotations: {}
   labels: {}
+  priorityClassName: ~
 
 thorasReasoning:
   connectors:
