--- a/charts/thoras/templates/dashboard/deployment.yaml
+++ b/charts/thoras/templates/dashboard/deployment.yaml
@@ -50,11 +50,8 @@ spec:
         ports:
         - containerPort: {{ .Values.thorasDashboard.containerPort }}
         resources:
-          limits:
-            memory: {{ .Values.thorasDashboard.limits.memory }}
-          requests:
-            cpu: {{ .Values.thorasDashboard.requests.cpu }}
-            memory: {{ .Values.thorasDashboard.requests.memory }}
+          limits: {{ .Values.thorasOperator.limits | toYaml | nindent 12 }}
+          requests: {{ .Values.thorasOperator.requests | toYaml | nindent 12 }}
         volumeMounts:
           - name: nginx-config
             mountPath: /etc/nginx/nginx.conf
@@ -69,11 +66,8 @@ spec:
             mountPath: /etc/nginx/nginx.conf
             subPath: nginx.conf
         resources:
-          limits:
-            memory: {{ .Values.thorasDashboard.limits.memory }}
-          requests:
-            cpu: {{ .Values.thorasDashboard.requests.cpu }}
-            memory: {{ .Values.thorasDashboard.requests.memory }}
+          limits: {{ .Values.thorasDashboard.limits | toYaml | nindent 12 }}
+          requests: {{ .Values.thorasDashboard.requests | toYaml | nindent 12 }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
