--- a/charts/thoras/templates/slm-api/deployment.yaml
+++ b/charts/thoras/templates/slm-api/deployment.yaml
@@ -30,11 +30,8 @@ spec:
         ports:
         - containerPort: {{ .Values.thorasSlmAgent.containerPort }}
         resources:
-          limits:
-            memory: {{ .Values.thorasSlmAgent.limits.memory }}
-          requests:
-            cpu: {{ .Values.thorasSlmAgent.requests.cpu }}
-            memory: {{ .Values.thorasSlmAgent.requests.memory }}
+          limits: {{ .Values.thorasSlmAgent.limits | toYaml | nindent 12 }}
+          requests: {{ .Values.thorasSlmAgent.requests | toYaml | nindent 12 }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
