--- a/charts/thoras/templates/api-server-v2/deployment.yaml
+++ b/charts/thoras/templates/api-server-v2/deployment.yaml
@@ -161,11 +161,8 @@ spec:
             path: /health
             port: {{ .Values.thorasApiServerV2.containerPort }}
         resources:
-          limits:
-            memory: {{ .Values.thorasApiServerV2.limits.memory }}
-          requests:
-            cpu: {{ .Values.thorasApiServerV2.requests.cpu }}
-            memory: {{ .Values.thorasApiServerV2.requests.memory }}
+          limits: {{ .Values.thorasApiServerV2.limits | toYaml | nindent 12 }}
+          requests: {{ .Values.thorasApiServerV2.requests | toYaml | nindent 12 }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
