--- a/charts/thoras/templates/forecast-worker/deployment.yaml
+++ b/charts/thoras/templates/forecast-worker/deployment.yaml
@@ -105,12 +105,8 @@ spec:
             value: {{ .Values.thorasForecast.prometheus.port | quote }}
           {{- end }}
         resources:
-          requests:
-            cpu: {{ .Values.thorasForecast.worker.requests.cpu }}
-            memory: {{ .Values.thorasForecast.worker.requests.memory }}
-          limits:
-            cpu: {{ .Values.thorasForecast.worker.limits.cpu }}
-            memory: {{ .Values.thorasForecast.worker.limits.memory }}
+          limits: {{ .Values.thorasForecast.worker.limits | toYaml | nindent 12 }}
+          requests: {{ .Values.thorasForecast.worker.requests | toYaml | nindent 12 }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
