--- a/charts/thoras/tests/forecast_worker_test.yaml
+++ b/charts/thoras/tests/forecast_worker_test.yaml
@@ -264,3 +264,27 @@ tests:
           content:
             name: TRAINING_JITTER_MINUTES
             value: "30"
+  - it: Should enable request and limit overrides
+    set:
+      thorasForecast:
+        worker:
+          requests:
+            memory: "512Mi"
+            cpu: "500m"
+            hugepages-1Gi: 2Gi
+          limits:
+            memory: "1Gi"
+            cpu: "1"
+            hugepages-1Gi: 2Gi
+    asserts:
+      - isSubset:
+          path: spec.template.spec.containers[?(@.name == 'thoras-forecast-worker')].resources
+          content:
+            requests:
+              memory: "512Mi"
+              cpu: "500m"
+              hugepages-1Gi: "2Gi"
+            limits:
+              memory: "1Gi"
+              cpu: "1"
+              hugepages-1Gi: "2Gi"
