--- a/charts/thoras/tests/monitor_deployment_test.yaml
+++ b/charts/thoras/tests/monitor_deployment_test.yaml
@@ -79,3 +79,29 @@ tests:
       - equal:
           path: spec.template.metadata.annotations["custom-annotation"]
           value: "test-value"
+  - it: Should enable request and limit overrides
+    template: monitor/deployment.yaml
+    set:
+      thorasMonitor:
+        enabled: true
+        unittesting: true
+        requests:
+          memory: "512Mi"
+          cpu: "500m"
+          hugepages-1Gi: 2Gi
+        limits:
+          memory: "1Gi"
+          cpu: "1"
+          hugepages-1Gi: 2Gi
+    asserts:
+      - isSubset:
+          path: spec.template.spec.containers[?(@.name == 'thoras-monitor-v2')].resources
+          content:
+            requests:
+              memory: "512Mi"
+              cpu: "500m"
+              hugepages-1Gi: "2Gi"
+            limits:
+              memory: "1Gi"
+              cpu: "1"
+              hugepages-1Gi: "2Gi"
