--- a/charts/thoras/tests/agent_daemonset_test.yaml
+++ b/charts/thoras/tests/agent_daemonset_test.yaml
@@ -30,3 +30,30 @@ tests:
       - equal:
           path: spec.template.spec.containers[0].image
           value: us-east4-docker.pkg.dev/thoras-registry/platform/services:TEST
+  - it: Can override resources block
+    set:
+      thorasAgent:
+        enabled: True
+        resources:
+          requests:
+            memory: "512Mi"
+            cpu: "500m"
+            hugepages-1Gi: "2Gi"
+          limits:
+            memory: "1Gi"
+            cpu: "1"
+            hugepages-1Gi: "2Gi"
+    chart:
+      version: "4.7.0"
+    asserts:
+      - isSubset:
+          path: spec.template.spec.containers[?(@.name == 'thoras-agent')].resources
+          content:
+            requests:
+              memory: "512Mi"
+              cpu: "500m"
+              hugepages-1Gi: "2Gi"
+            limits:
+              memory: "1Gi"
+              cpu: "1"
+              hugepages-1Gi: "2Gi"
